<resources>
    <string name="app_name">易货君</string>
    <string name="network_connection_failed" translatable="false">服务器连接失败</string>
    <string name="no_more_data" translatable="false">没有更多数据</string>
    <string name="network_busy" translatable="false">网络繁忙</string>
    <string name="reacquire" translatable="false">重新获取</string>
    <string name="upload_fail" translatable="false">上传文件出错，请检查您的网络以及文件大小</string>
    <string name="inv_code">邀请码：%s</string>
    <string name="goods_sell">已售%d件</string>
    <string name="goods_integral">%s 积分</string>
    <string name="goods_price">￥%s元</string>
    <string name="price">￥%s元</string>
    <string name="price_goods_integral">￥%s元,%s 积分</string>
    <string name="detail_pic">&lt;img src=\%s&gt;</string>
    <string name="nickname">昵称：%s</string>
    <string name="account">账号：%s</string>
    <string name="level">身份：%s</string>
    <string name="dt_count">一级人数：%d</string>
    <string name="all_count">团队总人数：%d</string>
    <string name="dt_valid_count">一级活跃：%d</string>
    <string name="all_valid_count">团队活跃总人数：%d</string>
    <string name="type">类型：%s</string>
    <string name="content">内容：%s</string>
    <string name="time">时间：%s</string>
    <string name="add_price">￥%s元</string>
    <string name="alipay_name">支付宝姓名：%s</string>
    <string name="alipay_account">支付宝账号：%s</string>
    <string name="start_time">发起时间：%s</string>
    <string name="comment_count">宝贝评论（%d）</string>
    <string name="all">全部(%d)</string>
    <string name="stocks">库存：%d</string>
    <string name="num">X%s</string>
    <string name="attr">商品规格：%s</string>
    <string name="address">地址：%s</string>
    <string name="phone">联系电话：%s</string>
    <string name="sales">销量：%d</string>
    <string name="score">评分：%s</string>
    <string name="fans">粉丝：%d</string>
    <string name="order_num">订单编号：%s</string>
    <string name="qdjf">签到积分(%s积分，服务费%s %%)</string>
    <string name="yhjf">易货积分(%s积分，服务费%s %%)</string>
    <string name="xfjf">消费积分(%s积分，服务费%s %%)</string>
    <string name="ye">余额(￥%s元)</string>
</resources>