<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/view_head"
        layout="@layout/layout_head" />

    <include layout="@layout/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="@dimen/dimen_font_20"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingVertical="@dimen/dimen_dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="对方手机号"
                android:textColor="@color/color_333"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_dp_10"
                android:layout_weight="1"
                android:background="@null"
                android:hint="请输入对方手机号"
                android:inputType="phone"
                android:textSize="14sp" />
        </LinearLayout>

        <include layout="@layout/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingVertical="@dimen/dimen_dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="积分"
                android:textColor="@color/color_333"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_intergral"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_dp_10"
                android:layout_weight="1"
                android:background="@null"
                android:hint="请输入积分"
                android:inputType="number"
                android:textSize="14sp" />

        </LinearLayout>

        <include layout="@layout/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_8"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="积分类型选择"
                android:layout_marginTop="10dp"
                android:textColor="@color/color_333"
                android:textSize="14sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_1"
                    style="@style/CustomCheckBoxTheme"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_dp_10"
                    android:text="@string/qdjf" />

                <RadioButton
                    android:id="@+id/rb_2"
                    style="@style/CustomCheckBoxTheme"
                    android:layout_width="match_parent"
                    android:checked="true"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_dp_10"
                    android:text="@string/yhjf" />

                <RadioButton
                    android:id="@+id/rb_3"
                    style="@style/CustomCheckBoxTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_dp_10"
                    android:text="@string/xfjf" />

            </RadioGroup>

        </LinearLayout>

        <include layout="@layout/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingVertical="@dimen/dimen_dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="备注"
                android:textColor="@color/color_333"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_mark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_dp_10"
                android:layout_weight="1"
                android:background="@null"
                android:hint="请输入备注"
                android:textSize="14sp" />

        </LinearLayout>

        <include layout="@layout/line" />

        <Button
            android:id="@+id/bt_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_dp_50"
            android:layout_marginTop="@dimen/dimen_dp_40"
            android:background="@drawable/confirm_bg"
            android:text="转积分"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>