<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/view_head"
        layout="@layout/layout_head" />

    <include layout="@layout/line" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_dp_10"
                android:layout_marginTop="@dimen/dimen_dp_10"
                android:background="@drawable/bg_white_8"
                android:gravity="center_vertical"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/iv_goods"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:background="#2196F3" />

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="￥%s"
                    android:textColor="@color/red"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toRightOf="@id/iv_goods"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="90dp"
                    android:text="这是商品标题这是商品标题这是商品标题这是商品标题这是商品标题这是商品标题"
                    android:textColor="@color/color_333"
                    app:layout_constraintLeft_toLeftOf="@id/tv_price"
                    app:layout_constraintTop_toBottomOf="@id/tv_price" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_dp_10"
                android:layout_marginTop="@dimen/dimen_dp_10"
                android:background="@drawable/bg_white_8"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="积分抵扣"
                    android:textColor="@color/color_333"
                    android:textSize="14sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rb_1"
                        style="@style/CustomCheckBoxTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:padding="@dimen/dimen_dp_10"
                        android:text="@string/qdjf" />

                    <RadioButton
                        android:id="@+id/rb_2"
                        style="@style/CustomCheckBoxTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_dp_10"
                        android:text="@string/yhjf" />

                    <RadioButton
                        android:id="@+id/rb_3"
                        style="@style/CustomCheckBoxTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_dp_10"
                        android:text="@string/xfjf" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_dp_10"
                android:layout_marginTop="@dimen/dimen_dp_10"
                android:background="@drawable/bg_white_8"
                android:orientation="vertical"
                android:padding="15dp">

                <RelativeLayout
                    android:id="@+id/rl_zfb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="支付宝"
                        android:textColor="@color/color_333"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/rb_4"
                        style="@style/CustomCheckBoxTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:checked="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/tv_ye"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/ye"
                        android:textColor="@color/color_333"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/rb_5"
                        style="@style/CustomCheckBoxTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="总金额:"
                android:textColor="@color/color_333"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/bt_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_dp_50"
        android:layout_marginHorizontal="@dimen/dimen_dp_15"
        android:layout_marginTop="@dimen/dimen_dp_40"
        android:background="@drawable/confirm_bg"
        android:text="确定支付"
        android:textColor="@color/white" />

</LinearLayout>